# projet_m2

./: .gitignore  .gitmodules  README.md  requirements.txt
code/: classifier.py  cut.py  main.py  option.py  process.py
code/cpp/: CMakeLists.txt
code/cpp/pampsi/: image.cpp  image.hpp  main.cpp  max_tree.cpp  max_tree.hpp  morphology.hpp
rapport/: rendu.tex
